# memory-service

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  DEVELOPERS.md  Dockerfile  Dockerfile.agent  Dockerfile.dev  Dockerfile.portable  MCP_BRIDGE_PLAN.md  README.md  TODO.md  Taskfile.yml  WORKAROUNDS.md  air.toml  compose.yaml  fly.toml  go.mod  go.sum  main.go  pom.xml  prometheus.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  init.sh  post-start.sh  supervisord.conf
.github/: actionlint.yaml  dependabot.yml
.github/cache/: go-test-go.sum  go-test-site.sum  go-verify-generated.sum  maven-test-java.key  maven-test-site.key  maven-verify-generated.key  npm-test-java.key  npm-test-site.key  npm-verify-generated.key
.github/workflows/: ci.yml  deploy-site.yml  devcontainer.yml  pr-check.yml  publish-java-snapshot.yml  release.yml  test-documentation.yml
.skills/: checkpoint-maintenance.md
.skills/build-test/: SKILL.md
.skills/chat-frontend/: SKILL.md
.skills/cucumber-features/: skill.md
.skills/enhancement-docs/: SKILL.md
.skills/gorm-query-patterns/: SKILL.md
.skills/openapi-workflow/: SKILL.md
.skills/operationevent-logging/: SKILL.md
.skills/prepare-pull-request/: SKILL.md
.skills/site-tests/: skill.md
.skills/testing/: SKILL.md
.skills/verify-dependabot-prs/: SKILL.md
.skills/wt/: SKILL.md
agent/: README.md  pom.xml
common/admin-webui/: README.md
common/agent-webui/: package-lock.json  package.json  pom.xml  tailwind.config.js
common/chat-frontend/: eslint.config.js  index.html  pom.xml
common/docker/: context-inspect.Dockerfile
common/keycloak/: memory-service-realm.json
contracts/openapi/: openapi-admin.yml  openapi.yml
deploy/: README.md  kind-config.yaml
deploy/dev/: air.toml
deploy/fly/: README.md  deploy.sh  fly.toml
deploy/keycloak/: memory-service-realm.json  postgres-init-keycloak.sql
docker/: postgres-init-keycloak.sql
docs/: 002-summarization-design.md  003-grpc-design.md  004-response-cancel.md  005-redis-connection-limits.md  007-multi-agent-support.md  009-springboot-support.md  architecture.md  async-sub-agent.md  building.md  chat-frontend-design.md  datastore-reset.md  db-design.md  design.md  developers.md  encryption.md  entry-data-model.md  go-plugin-pattern.md  go-single-port.md  grpc-design.md  memory-cognition.md  processors.md  release-notes.md  skill-extraction-workflow.md  summarization-design.md  typical-load-patterns.md  user-journey.md
docs/enhancements/: 001-conversation-forking-design.md  002-summarization-design.md  003-grpc-design.md  004-response-cancel.md  005-redis-connection-limits.md  006-infinispan-support.md  007-multi-agent-support.md  008-headless-ui-component-design.md  009-springboot-support.md  010-drop-resumePosition.md  011-simpler-cache-config.md  012-spring-site-docs.md  013-soft-deletes.md  014-admin-access.md  015-task-queue.md  016-data-eviction.md  017-hide-conversation-groups.md  018-rename-messages-to-entrys.md  019-rename-summary-to-index.md  020-admin-frontend.md  021-uuid-ids-in-contract.md  022-chat-app-design.md  023-chat-app-implementation.md  024-sharing-api-enhancements.md  (+79 more)
examples/: pom.xml
internal/: FACTS.md  pom.xml
java/: pom.xml
mcp/: .gitignore  client.go  go.mod  main.go  tools.go
memory-service/: FACTS.md  README.md  pom.xml
memory-service-client/: pom.xml
memory-service-contracts/: FACTS.md  pom.xml
memory-service-extension/: README.md  pom.xml
memory-service-mcp/: README.md  main.go
memory-service-proto/: pom.xml
python/: FACTS.md  pom.xml  pyproject.toml
python/examples/chat-python/: pyproject.toml
python/examples/langchain/doc-checkpoints/01-basic-agent/: README.md  app.py  pyproject.toml
python/examples/langgraph/doc-checkpoints/01-basic-langgraph/: README.md  app.py  pyproject.toml
python/examples/langgraph/doc-checkpoints/04-conversation-forking/: app.py  pyproject.toml
python/examples/langgraph/doc-checkpoints/30-memories/: README.md  app.py  pyproject.toml
python/langchain/: README.md  pyproject.toml
python/langchain/memory_service_langchain/: __init__.py  chat_helpers.py  checkpoint_saver.py  history_middleware.py  proxy.py  request_context.py  response_recorder.py  response_recording_manager.py  response_resumer.py  transport.py
python/langchain/memory_service_langchain/grpc/: __init__.py
python/langchain/memory_service_langchain/grpc/memory/: __init__.py
python/langchain/memory_service_langchain/grpc/memory/v1/: __init__.py  memory_service_pb2.py  memory_service_pb2_grpc.py
python/langchain/memory_service_langchain/langgraph/: __init__.py  async_store.py  store.py  transport.py
python/langgraph/: pyproject.toml
python/langgraph/memory_service_langgraph/: __init__.py  async_store.py  indexing.py  store.py  transport.py
quarkus/: FACTS.md  pom.xml
quarkus-data-encryption/: pom.xml
site/: .prettierrc  FACTS.md  README.md  astro.config.mjs  package-lock.json  package.json  remark-base-path.mjs  remark-mermaid.mjs  remark-rego-prism.mjs  tsconfig.json
site-tests/: .lychee.toml  FACTS.md  README.md  pom.xml
spring/: FACTS.md  pom.xml
typescript/: FACTS.md
(+2170 files in other folders)
