[project]
name = "memory-service-langchain"
version = "0.1.0"
description = "Memory Service integration for LangChain and LangGraph Python agents"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Hiram Chirino"},
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "grpcio>=1.74.0,<2.0.0",
  "httpx>=0.28.0,<1.0.0",
  "langchain>=1.0.0,<2.0.0",
  "langgraph>=1.0.0,<2.0.0",
  "langchain-core>=1.0.0,<2.0.0",
  "protobuf>=6.31.1,<7.0.0"
]

[project.urls]
Homepage = "https://chirino.github.io/memory-service/"
Repository = "https://github.com/chirino/memory-service"
Documentation = "https://chirino.github.io/memory-service/docs/python-langchain/getting-started/"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory_service_langchain"]
