[project]
name = "langchain-doc-checkpoint-01-basic-agent"
version = "0.1.0"
description = "Memory Service Python docs checkpoint app"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.139.0,<1.0.0",
  "langchain>=1.3.11,<2.0.0",
  "langchain-openai>=1.3.3,<2.0.0",
  "httpx>=0.28.0,<1.0.0",
  "uvicorn>=0.50.2,<1.0.0"
]

[tool.uv]
package = false
