[project]
name = "langgraph-doc-checkpoint-01-basic-langgraph"
version = "0.1.0"
description = "Memory Service LangGraph docs checkpoint app"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.138.0,<1.0.0",
  "langgraph>=1.2.5,<2.0.0",
  "langchain-openai>=1.3.2,<2.0.0",
  "uvicorn>=0.49.0,<1.0.0",
]

[tool.uv]
package = false
