[project]
name = "langgraph-doc-checkpoint-04-conversation-forking"
version = "0.1.0"
description = "Memory Service LangGraph docs checkpoint app"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "langgraph>=1.0.0,<2.0.0",
  "langchain-openai>=1.0.0,<2.0.0",
  "memory-service-langchain",
  "httpx>=0.28.0,<1.0.0",
  "uvicorn>=0.34.0,<1.0.0",
]

[tool.uv]
package = false
